FrontEnd/Envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              #cors:
              #  allow_origin_string_match:
              #  - safe_regex:
              #      google_re2: {}
              #      regex: \*
              #  allow_methods: "GET, POST, PUT, DELETE"
                #allow_headers: "authorization, content-type, x-requestid, x-requested-with"
                #allow_credentials: true
              routes:
              - match:
                  prefix: "/c/"
                route:
                  #host_rewrite_literal: www.envoyproxy.io
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/apibackend/method/"
                  cluster: service_dapr

  clusters:
  - name: service_dapr
    #type: LOGICAL_DNS
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3500
